Refactored the code according to requirements